--- a/index.html
+++ b/index.html
@@ -12,7 +12,59 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+
+         <li>An "element" is a piece oof content between opening and closing tags</li>
+         <li>A "tag" is a "keyword" that defines how a web browser will format and display content</li>
+         <li>The "head" element contains information about the webpage.</li> 
+         <li>The "body" element represents the visible content shown to the user.</li>
+         <li>The "charset" element sets our character encoding.</li>
+         <li>The "http-equiv" element sets an HTTP header for content.</li>
+         <li>The "viewport" element sets the default view for our webpage.</li>
+         <li>The "!DOCTYPE" lets the browser know what document type it should expect when opened.</li>
+         <li> The "html" tag represents the start of the html document.</li>
+         <li>The "title" element defines the title for a webpage.</li>
+         <li>The "style" element defines the CSS styles associated with a website.</li>
+         <li>The "base" element defines the base URL for a webpage.</li>
+         <li>The "link" element connects an external resource to the HTML document.</li>
+         <li>The "meta" element defines metadata such as the character set, descripttion, keywords, author, and viewport</li>
+         <li>The "script" element embeds client-side scripts in the HTML document</li>
+         <li>Elements that are nested inside other elements are called child elements.</li>
+         <li>"Headings, including "h1" through "h6", are larger, more prominent titles and subtitles to organize a page.</li>
+         <li>The "p" element is a paragraph, or block of text.</li>
+         <li>The "ul", "ol", and "li" elements are bulleted or numbered lists.</li>
+         <li>The "img" element containts information about images that are to be displayed.</li>
+         <li>The 'br" element creates a line of empty space.</li>
+         <li>The "a" element creates a link to the same, or other webpages.</li>
+         
+      </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git add -A commits all files in the working branch</li>
+          <li>git commit -m commit changes and leave a brief description of what has been done</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
