--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./assets/style.css">
+
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -38,6 +42,9 @@
          <li>The "img" element containts information about images that are to be displayed.</li>
          <li>The 'br" element creates a line of empty space.</li>
          <li>The "a" element creates a link to the same, or other webpages.</li>
+         <li>A "link" element creates the connection to the external file.</li>
+         <li>The "rel" attribute specifies the relationship between the current document and the linked document resource.</li>
+         <li>The "href" attribute specifies the location (URL) of the external resource.</li>
          
       </ul>
       </section>
@@ -45,7 +52,8 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
       </section>
    
