--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css"> %links style.css
 
     <title>Prework Study Guide</title>
   </head>
@@ -14,6 +14,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -60,10 +61,10 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>git status: checks what branch we are currently on</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git add -A commits all files in the working branch</li>
-          <li>git commit -m commit changes and leave a brief description of what has been done</li>
+          <li>"git status": checks what branch we are currently on</li>
+          <li>"git checkout -b feature/branch-name" creates a new branch and switches to it</li>
+          <li>"git add -A" commits all files in the working branch</li>
+          <li>"git commit -m" commits changes then leave a brief description of what has been done</li>
         </ul>
       </section>
    
@@ -78,5 +79,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script> %links script.js
   </body>
 </html>
