--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>Wrapping something, like an if statement or for loop, is just literally enclosing the code in curly brackets
+          <li>Remember to include "()" at the end of a function.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
